Fixes About dialog window resize behavior: now all elements are properly resized; Tabs in About dialog cannot be closed. The About dialog has minWidth/Height to avoid visual issues during resizing. Now some part of the code uses URI instead of URL. It is because all public constructors of URL will be deprecated since JDK 20.
Signed-off-by: Vest <Vest@users.noreply.github.com>